--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.4.1",
