--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.0",
     "react-scroll-to-bottom": "^4.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
